<resources>
    <string name="app_name">ShowerIO</string>
    <string name="title_activity_search_for_devices">searchForDevices</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="iniciar">Iniciar!</string>
    <string name="ip_label">Ip Address: </string>
    <string name="list_showers">Lista de Dispositivos </string>
    <string name="start">Começar </string>
    <string name="setName">Nomear </string>
    <string name="password">Senha </string>
    <string name="reset">Resetar </string>
    <string name="restart">Reiniciar </string>
    <string name="quit">Sair </string>
    <string name="noName">Dispositivo sem Nome </string>



</resources>
